一些调整