@@ -2,38 +2,36 @@ package com.example.think.v1.form;
 
 import com.example.think.utils.ThreadPoolUtil;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
+import java.io.Serializable;
 import java.util.*;
+import java.util.List;
 
 /**
  * 一个新新的个体
  * 个体本身宏观上是同步的
+ * 不要求它是n会话的
  */
 @Data
 @Slf4j
-public class Entity implements Runnable {
+@NoArgsConstructor
+public class Entity implements Runnable, Serializable {
     /**
      * 启动信号位置
      */
-    private static final Integer boot = 0;
+    public static final Integer BOOT = 0;
 
     /**
      * 有很多细胞
      */
-    private HashMap<Integer, Cell> cells;
+    private Map<Integer, Cell> cells;
 
     /**
      * 脑部的连接
      */
-    public HashMap<Integer, Set<Link>> links;
-
-    /**/
-    private boolean change = false;
-
-    public Entity() {
-
-    }
+    public Map<Integer, Set<Link>> links;
 
     /**
      * 初始化脑图
@@ -58,20 +56,18 @@ public class Entity implements Runnable {
      * todo 应该让其思考
      */
     public void init() {
-        if (Objects.nonNull(this.links.get(boot))) {
+        if (Objects.nonNull(this.links.get(BOOT))) {
             return;
         }
         // todo 进行初始化操作
         HashSet<Link> value = new HashSet<>();
-        this.links.put(boot, value);
+        this.links.put(BOOT, value);
         // 随机一些细胞，填充
-        value.add(Link.random(cells.size()));
         this.cells.keySet().forEach(cellId -> {
             Set<Link> linkSet = this.links.getOrDefault(cellId, new HashSet<>());
             linkSet.add(Link.random(cells.size()));
             this.links.put(cellId, linkSet);
         });
-        this.setChange(true);
     }
 
     /**
@@ -79,22 +75,13 @@ public class Entity implements Runnable {
      *
      * @param in 输入的信息
      */
-    public void connect(String in) {
-        if (in.isEmpty()) {
-            return;
+    public static String connect(String... in) {
+        if (Objects.isNull(in) || in.length == 0) {
+            return null;
         }
 
         // todo 将信号扔到脑子中进行处理
         // 怎么处理信号是个大问题!!
-        this.out();
-    }
-
-    /**
-     * 输出模块
-     *
-     * @return 输出结果
-     */
-    public String out() {
         String aa = "aa";
         log.debug("think: {}", aa);
         return aa;
@@ -106,15 +93,17 @@ public class Entity implements Runnable {
     @Override
     public void run() {
         // 进行思考
-        Set<Link> boot0 = this.links.get(boot);
+        Set<Link> boot0 = this.links.get(BOOT);
         /* 细胞任务列表*/
-        LinkedList<Integer> taskList = new LinkedList<>(boot0.stream().map(Link::getCellId).toList());
-        while (!taskList.isEmpty()) {
+        List<Integer> taskList = new LinkedList<>(boot0.stream().map(Link::getCellId).toList());
+        //noinspection InfiniteLoopStatement
+        while (true) {
             /* 负责处理计算方面*/
             Integer e;
             try {
-                e = taskList.removeFirst();
+                e = taskList.remove(0);
             } catch (NoSuchElementException exception) {
+                ThreadPoolUtil.sleep(1000);
                 continue;
             }
             ThreadPoolUtil.submitScheduled(this.js(e, taskList));
@@ -122,7 +111,6 @@ public class Entity implements Runnable {
             if (taskList.isEmpty() || taskList.size() > 1000) {
                 ThreadPoolUtil.sleep();
             }
-            this.setChange(true);
         }
     }
 
@@ -133,10 +121,10 @@ public class Entity implements Runnable {
      * @param taskListTemp 临时存储的待计算
      * @return 任务
      */
-    private Runnable js(Integer cellId, LinkedList<Integer> taskListTemp) {
+    private Runnable js(Integer cellId, List<Integer> taskListTemp) {
         return () -> {
             Cell cell = this.cells.get(cellId);
-            log.debug("当前细胞编号 {} 线量 {}, 计算队列 {}", cellId, cell.getXl(), taskListTemp.size());
+            // log.debug("当前细胞编号 {} 线量 {}, 计算队列 {}", cellId, cell.getXl(), taskListTemp.size());
             Map<Integer, Message> run = cell.run(this.links.get(cellId));
             run.forEach((k, v) -> this.getCells().get(k).input(v));
             taskListTemp.addAll(run.keySet());
